# WeddingSongPlayer

./: README.md  docker-compose.yml
.cargo-husky/hooks/: pre-commit
.github/workflows/: pylint.yml  rust.yml
frontend/: Dockerfile  README.md  angular.json  package.json
frontend/src/: index.html
frontend/src/app/: app.spec.ts  app.ts
py-api/: .gitignore  Dockerfile  pyproject.toml
py-api/scripts/: lint.sh
py-api/wedding_song_player/: main.py
py-api/wedding_song_player/models/: common.py  spotify.py
py-api/wedding_song_player/routes/: spotify.py
rust-backend/: .gitignore  Cargo.toml  Dockerfile
rust-backend/src/: main.rs
rust-backend/src/api/: api_defs.rs  mod.rs
