[package]
name = "wedding-song-player"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { version = "0.9.1" }
okapi = "0.7.0"
rocket = { version = "0.5.1", default-features = false, features = ["serde_json"] }
rocket_dyn_templates = { version = "~0.2", features = ["tera"] }
rocket_okapi = "~0.9"
schemars = "1.0.4"
serde = "1.0.219"
serde_derive = "1.0.219"
tokio = { version = "1.47.1", features = ["default", "sync"] }
tracing = "0.1.41"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"] # ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

[features]
cuda = ["candle-core/cuda"]
